--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href=" ">Learn more</a></div>
             </div>
             <div class="header-2">
-                <div><img class="logo" src="./image/globe_files/logo.png"></div>
+                <div><img class="logo" src="/image/logo.png"></div>
                 <div class="button">
                     <span><i class="bi bi-person"></i></span>
                     <span class="Log">Log in</span>
@@ -206,7 +206,7 @@
             </div>
         </div>
         <div class="main-body4">
-            <div><img src="./image/globe_files/logo.png"></div>
+            <div><img src="./image/logo.png"></div>
             <div class="column">
                 <div>
                     <p>Solutions</p> <br>
